# rsBot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  fly.toml
crates/pi-agent-core/: Cargo.toml
crates/pi-agent-core/src/: lib.rs
crates/pi-ai/: Cargo.toml
crates/pi-ai/src/: anthropic.rs  google.rs  lib.rs  openai.rs  provider.rs  retry.rs  types.rs
crates/pi-ai/tests/: provider_contract_conformance.rs  provider_http_integration.rs
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/src/: auth_commands.rs  bootstrap_helpers.rs  channel_store.rs  channel_store_admin.rs  cli_args.rs  cli_types.rs  commands.rs  credentials.rs  diagnostics_commands.rs  events.rs  extension_manifest.rs  github_issues.rs  macro_profile_commands.rs  main.rs  model_catalog.rs  observability_loggers.rs  orchestrator.rs  package_manifest.rs  provider_auth.rs  provider_client.rs  provider_credentials.rs  provider_fallback.rs  rpc_capabilities.rs  rpc_protocol.rs  runtime_cli_validation.rs  runtime_loop.rs  runtime_output.rs  runtime_types.rs  session.rs  session_commands.rs  session_graph_commands.rs  session_navigation_commands.rs  session_runtime_helpers.rs  skills.rs  skills_commands.rs  slack.rs  startup_dispatch.rs  startup_local_runtime.rs  startup_model_catalog.rs  startup_model_resolution.rs  (+10 more)
crates/pi-coding-agent/tests/: cli_integration.rs
crates/tau-access/: Cargo.toml
crates/tau-access/src/: approvals.rs  identity.rs  lib.rs  pairing.rs  rbac.rs  rl_control_plane.rs  signed_envelope.rs  trust_roots.rs
crates/tau-agent-core/: Cargo.toml
crates/tau-agent-core/src/: cortex_runtime.rs  lib.rs  process_types.rs  runtime_safety_memory.rs  runtime_startup.rs  runtime_tool_bridge.rs  runtime_turn_loop.rs
crates/tau-algorithm/: Cargo.toml
crates/tau-algorithm/benches/: apo_throughput.rs
crates/tau-algorithm/src/: adapters.rs  apo.rs  collector.rs  gae.rs  lib.rs  ppo.rs  reward_inference.rs  safety_penalty_calibration.rs
crates/tau-algorithm/testdata/: safety_penalty_calibration_grid.json
crates/tau-cli/: Cargo.toml
crates/tau-cli/src/: cli_args.rs  cli_types.rs  command_file.rs  command_text.rs  gateway_remote_profile.rs  lib.rs  shell_completion.rs  validation.rs
crates/tau-coding-agent/: Cargo.toml
crates/tau-coding-agent/src/: approvals.rs  auth_commands.rs  bootstrap_helpers.rs  browser_automation_contract.rs  browser_automation_runtime.rs  canvas.rs  channel_adapters.rs  channel_lifecycle.rs  channel_send.rs  channel_store.rs  channel_store_admin.rs  cli_args.rs  cli_executable.rs  cli_types.rs  codex_cli_client.rs  commands.rs  custom_command_contract.rs  daemon_runtime.rs  dashboard_contract.rs  dashboard_runtime.rs  deployment_contract.rs  deployment_runtime.rs  deployment_wasm.rs  diagnostics_commands.rs  events.rs  extension_manifest.rs  gateway_contract.rs  gateway_openresponses.rs  gateway_remote_profile.rs  gateway_runtime.rs  gateway_ws_protocol.rs  github_issues.rs  github_transport_helpers.rs  live_rl_runtime.rs  macro_profile_commands.rs  main.rs  mcp_client.rs  mcp_server.rs  memory_contract.rs  memory_runtime.rs  (+54 more)
crates/tau-coding-agent/tests/: cli_integration.rs  examples_assets.rs
crates/tau-custom-command/: Cargo.toml
crates/tau-custom-command/src/: custom_command_contract.rs  custom_command_policy.rs  custom_command_runtime.rs  lib.rs
crates/tau-deployment/: Cargo.toml
crates/tau-deployment/src/: deployment_contract.rs  deployment_runtime.rs  deployment_wasm.rs  deployment_wasm_runtime.rs  fly_manifest_contract.rs  lib.rs
crates/tau-events/: Cargo.toml
crates/tau-events/src/: events_cli_commands.rs  lib.rs  tests.rs
crates/tau-extensions/: Cargo.toml
crates/tau-extensions/src/: lib.rs  tests.rs
crates/tau-gateway/: Cargo.toml
crates/tau-gateway/src/: gateway_contract.rs  gateway_openresponses.rs  gateway_runtime.rs  gateway_ws_protocol.rs  lib.rs  remote_profile.rs
crates/tau-github-issues/: Cargo.toml
crates/tau-github-issues-runtime/: Cargo.toml
crates/tau-github-issues-runtime/src/: github_issues_runtime.rs  lib.rs
crates/tau-github-issues/src/: github_issues_helpers.rs  github_transport_helpers.rs  issue_artifacts_command.rs  issue_auth_command.rs  issue_auth_helpers.rs  issue_chat_command.rs  issue_command_envelope.rs  issue_command_parser.rs  issue_command_usage.rs  issue_comment.rs  issue_core_command.rs  issue_demo_index.rs  issue_demo_index_command.rs  issue_doctor_command.rs  issue_event_action.rs  issue_event_collection.rs  issue_filter.rs  issue_prompt_helpers.rs  issue_render.rs  issue_run_error_comment.rs  issue_runtime_helpers.rs  issue_session_helpers.rs  lib.rs
crates/tau-memory/: Cargo.toml
crates/tau-memory/src/: lib.rs  memory_contract.rs  memory_runtime.rs  runtime.rs
crates/tau-multi-channel/: Cargo.toml
crates/tau-multi-channel/src/: lib.rs  multi_channel_contract.rs  multi_channel_credentials.rs  multi_channel_incident.rs  multi_channel_lifecycle.rs  multi_channel_live_connectors.rs  multi_channel_live_ingress.rs  multi_channel_media.rs  multi_channel_outbound.rs  multi_channel_policy.rs  multi_channel_route_inspect.rs  multi_channel_routing.rs  multi_channel_runtime.rs  multi_channel_send.rs
crates/tau-onboarding/: Cargo.toml
crates/tau-onboarding/src/: lib.rs  onboarding_command.rs  onboarding_daemon.rs  onboarding_paths.rs  onboarding_profile_bootstrap.rs  onboarding_release_channel.rs  onboarding_report.rs  onboarding_wizard.rs  profile_commands.rs  profile_store.rs  startup_config.rs  startup_daemon_preflight.rs  startup_dispatch.rs  startup_local_runtime.rs  startup_policy.rs  (+6 more)
crates/tau-ops/: Cargo.toml
crates/tau-orchestrator/: Cargo.toml
crates/tau-provider/: Cargo.toml
crates/tau-release-channel/: Cargo.toml
crates/tau-runtime/: Cargo.toml
crates/tau-session/: Cargo.toml
crates/tau-skills/: Cargo.toml
crates/tau-slack-runtime/: Cargo.toml
crates/tau-startup/: Cargo.toml
crates/tau-tools/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gateway_ws_parse.rs  rpc_ndjson_dispatch.rs  rpc_raw_dispatch.rs
(+2302 files in other folders)
