[workspace]
members = [
  "crates/pi-ai",
  "crates/pi-agent-core",
  "crates/pi-tui",
  "crates/pi-coding-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1.1"
thiserror = "2"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "io-std", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
jsonschema = "0.37"
sha2 = "0.10"
