[workspace]
members = [
  "crates/tau-cli",
  "crates/tau-core",
  "crates/tau-ai",
  "crates/tau-agent-core",
  "crates/tau-gateway",
  "crates/tau-multi-channel",
  "crates/tau-session",
  "crates/tau-skills",
  "crates/tau-extensions",
  "crates/tau-access",
  "crates/tau-orchestrator",
  "crates/tau-runtime",
  "crates/tau-events",
  "crates/tau-deployment",
  "crates/tau-tui",
  "crates/tau-startup",
  "crates/tau-provider",
  "crates/tau-release-channel",
  "crates/tau-diagnostics",
  "crates/tau-contract",
  "crates/tau-ops",
  "crates/tau-memory",
  "crates/tau-github-issues",
  "crates/tau-github-issues-runtime",
  "crates/tau-dashboard",
  "crates/tau-custom-command",
  "crates/tau-browser-automation",
  "crates/tau-voice",
  "crates/tau-slack-runtime",
  "crates/tau-discord-runtime",
  "crates/tau-tools",
  "crates/tau-onboarding",
  "crates/tau-coding-agent",
  "crates/tau-training-types",
  "crates/tau-training-store",
  "crates/tau-training-tracer",
  "crates/tau-training-runner",
  "crates/tau-training-proxy",
  "crates/tau-trainer",
  "crates/tau-algorithm",
  "crates/kamn-core",
  "crates/kamn-sdk",
  "crates/tau-safety",
  "tests/integration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8", features = ["json", "http1", "tokio", "ws"] }
aes-gcm = "0.10"
anyhow = "1"
async-trait = "0.1"
aho-corasick = "1.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"
cron = "0.15"
ed25519-dalek = "2.1"
futures-util = "0.3"
hmac = "0.12"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
regex = "1.11"
redb = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
shell-words = "1.1"
thiserror = "2"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "io-std", "time", "signal", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
jsonschema = "0.41"
minijinja = "2.12"
notify = "7.0"
arc-swap = "1.7"
toml = "0.8"
sha2 = "0.10"
wait-timeout = "0.2"
yrs = "0.25"
wasmparser = "0.225"
wasmtime = "25.0.3"
wat = "1.225.0"
rustyline = "14"
fastembed = { version = "5.9.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
