[package]
name = "tau-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
tau-gateway = { path = "../crates/tau-gateway" }
tau-runtime = { path = "../crates/tau-runtime" }

[workspace]
members = ["."]

[[bin]]
name = "rpc_raw_dispatch"
path = "fuzz_targets/rpc_raw_dispatch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rpc_ndjson_dispatch"
path = "fuzz_targets/rpc_ndjson_dispatch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gateway_ws_parse"
path = "fuzz_targets/gateway_ws_parse.rs"
test = false
doc = false
bench = false
