[package]
name = "pi-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
thiserror.workspace = true
pi-ai = { path = "../pi-ai" }

[dev-dependencies]
tokio.workspace = true
