[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
cron.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
pi-agent-core = { path = "../pi-agent-core" }
pi-ai = { path = "../pi-ai" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shell-words.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.8"
predicates = "3"
proptest = "1"
tempfile = "3"
