[package]
name = "tau-access"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tau-core = { path = "../tau-core" }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
