[package]
name = "tau-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tau-ai = { path = "../tau-ai" }
tau-safety = { path = "../tau-safety" }

[dev-dependencies]
httpmock = "0.8"
