[package]
name = "tau-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tau-session = { path = "../tau-session" }
tau-gateway = { path = "../tau-gateway" }

[dependencies.tau-multi-channel]
path = "../tau-multi-channel"
