[package]
name = "tau-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
cron.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hmac.workspace = true
tau-cli = { path = "../tau-cli" }
tau-core = { path = "../tau-core" }
tau-gateway = { path = "../tau-gateway" }
tau-multi-channel = { path = "../tau-multi-channel" }
tau-session = { path = "../tau-session" }
tau-skills = { path = "../tau-skills" }
tau-extensions = { path = "../tau-extensions" }
tau-access = { path = "../tau-access" }
tau-orchestrator = { path = "../tau-orchestrator" }
tau-runtime = { path = "../tau-runtime" }
tau-events = { path = "../tau-events" }
tau-deployment = { path = "../tau-deployment" }
tau-startup = { path = "../tau-startup" }
tau-provider = { path = "../tau-provider" }
tau-diagnostics = { path = "../tau-diagnostics" }
tau-release-channel = { path = "../tau-release-channel" }
tau-ops = { path = "../tau-ops" }
tau-memory = { path = "../tau-memory" }
tau-github-issues = { path = "../tau-github-issues" }
tau-dashboard = { path = "../tau-dashboard" }
tau-agent-core = { path = "../tau-agent-core" }
tau-ai = { path = "../tau-ai" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shell-words.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wait-timeout.workspace = true
yrs.workspace = true
wasmparser.workspace = true

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.8"
predicates = "3"
proptest = "1"
tempfile = "3"
