[package]
name = "tau-custom-command"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shell-words = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "time"] }

tau-core = { path = "../tau-core" }
tau-contract = { path = "../tau-contract" }
tau-runtime = { path = "../tau-runtime" }

[dev-dependencies]
tempfile = "3.25"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time"] }
