[package]
name = "tau-deployment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tau-cli = { path = "../tau-cli" }
tau-core = { path = "../tau-core" }
tau-runtime = { path = "../tau-runtime" }
wasmparser.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
