[package]
name = "tau-extensions"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-runtime = { path = "../tau-runtime" }
tau-cli = { path = "../tau-cli" }
wait-timeout.workspace = true

[dev-dependencies]
tempfile = "3"
wat.workspace = true
