[package]
name = "tau-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-agent-core = { path = "../tau-agent-core" }
tau-ai = { path = "../tau-ai" }
tau-contract = { path = "../tau-contract" }
tau-core = { path = "../tau-core" }
tau-dashboard-ui = { path = "../tau-dashboard-ui" }
tau-memory = { path = "../tau-memory" }
tau-multi-channel = { path = "../tau-multi-channel" }
tau-runtime = { path = "../tau-runtime" }
tau-session = { path = "../tau-session" }
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
async-trait.workspace = true
reqwest.workspace = true
tempfile = "3"
