[package]
name = "tau-github-issues"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tau-session = { path = "../tau-session" }
tau-ai = { path = "../tau-ai" }
