[package]
name = "tau-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Internal crates

tau-contract = { path = "../tau-contract" }

[dev-dependencies]
httpmock = "0.8"
tempfile = "3.25"
