[package]
name = "tau-multi-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde"] }
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }

[dependencies.tau-core]
path = "../tau-core"

[dependencies.tau-runtime]
path = "../tau-runtime"

[dependencies.tau-orchestrator]
path = "../tau-orchestrator"

[dev-dependencies]
httpmock = "0.8"
serde_json = "1"
tempfile = "3"
