[package]
name = "tau-onboarding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tau-access = { path = "../tau-access" }
tau-ai = { path = "../tau-ai" }
tau-agent-core = { path = "../tau-agent-core" }
tau-cli = { path = "../tau-cli" }
tau-core = { path = "../tau-core" }
tau-gateway = { path = "../tau-gateway" }
tau-multi-channel = { path = "../tau-multi-channel" }
tau-provider = { path = "../tau-provider" }
tau-release-channel = { path = "../tau-release-channel" }
tau-skills = { path = "../tau-skills" }
tau-tools = { path = "../tau-tools" }
tau-ops = { path = "../tau-ops" }

[dev-dependencies]
clap = { workspace = true }
tempfile = "3"
