[package]
name = "tau-ops"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
wait-timeout.workspace = true
tau-access = { path = "../tau-access" }
tau-ai = { path = "../tau-ai" }
tau-cli = { path = "../tau-cli" }
tau-core = { path = "../tau-core" }
tau-runtime = { path = "../tau-runtime" }
tau-session = { path = "../tau-session" }
tau-multi-channel = { path = "../tau-multi-channel" }
tau-release-channel = { path = "../tau-release-channel" }

[dev-dependencies]
clap.workspace = true
tempfile = "3"
