[package]
name = "tau-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tau-core = { path = "../tau-core" }
tau-runtime = { path = "../tau-runtime" }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
