[package]
name = "tau-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shell-words.workspace = true
tau-ai = { path = "../tau-ai" }
tau-cli = { path = "../tau-cli" }
tau-core = { path = "../tau-core" }
tokio.workspace = true
tracing.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
httpmock = "0.8"
tempfile = "3"
