[package]
name = "tau-release-channel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-core = { path = "../tau-core" }
tokio.workspace = true

[dev-dependencies]
httpmock = "0.8"
tempfile = "3"
