[package]
name = "tau-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tau-ai = { path = "../tau-ai" }
tau-agent-core = { path = "../tau-agent-core" }
tau-core = { path = "../tau-core" }

[dev-dependencies]
tempfile = "3"
