[package]
name = "tau-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["net"] }
tau-ai = { path = "../tau-ai" }
tau-core = { path = "../tau-core" }
url = "2"

[dev-dependencies]
tempfile = "3"
