[package]
name = "tau-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["net"] }
wasmtime.workspace = true
wasmparser.workspace = true
wat.workspace = true
tau-ai = { path = "../tau-ai" }
tau-agent-core = { path = "../tau-agent-core" }
tau-core = { path = "../tau-core" }
tau-session = { path = "../tau-session" }
url = "2"

[dev-dependencies]
tempfile = "3"
