[package]
name = "tau-session"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rusqlite = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tau-ai = { path = "../tau-ai" }
tau-core = { path = "../tau-core" }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
