[package]
name = "tau-slack-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tau-access = { path = "../tau-access" }
tau-agent-core = { path = "../tau-agent-core" }
tau-ai = { path = "../tau-ai" }
tau-core = { path = "../tau-core" }
tau-ops = { path = "../tau-ops" }
tau-runtime = { path = "../tau-runtime" }
tau-session = { path = "../tau-session" }
tau-startup = { path = "../tau-startup" }
tau-tools = { path = "../tau-tools" }

[dev-dependencies]
httpmock = "0.8"
tempfile = "3"
